--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,9 @@
 
 %\input{chapters/todo}
 %\input{chapters/intro}
-\input{chapters/networks}
-\input{chapters/devices}
-%\input{chapters/preprocess}
+%\input{chapters/networks}
+%\input{chapters/devices}
+\input{chapters/preprocess}
 %\input{chapters/models}
 %\input{chapters/tuning}
 %\input{chapters/results}
