--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -40,6 +40,7 @@
 \usetikzlibrary{matrix,positioning,fit,backgrounds,intersections}
 \usetikzlibrary{calc}
 \usetikzlibrary{arrows}
+\usetikzlibrary{decorations.pathreplacing,calligraphy}
 
 %\renewcommand\thesection{\arabic{section}}
 \addbibresource{bibliografia.bib}
