Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{book}
+\documentclass[a4paper,12pt]{book}
 
 \usepackage{impostazioni}
 
@@ -15,15 +15,18 @@
 %\input{chapters/intro}
 %\input{chapters/networks}
 %\input{chapters/devices}
-\input{chapters/preprocess}
-%\input{chapters/models}
+%\input{chapters/preprocess}
+\input{chapters/models}
 %\input{chapters/tuning}
 %\input{chapters/results}
 
 
 %\input{chapters/conclusion.tex}
-
 \backmatter
+
+\appendix
+%\input{chapters/appendix}
+
 \printbibliography
 
 \end{document}
