--- a/main.tex
+++ b/main.tex
@@ -22,10 +22,10 @@
 
 
 %\input{chapters/conclusion.tex}
-\backmatter
 
 \appendix
-%\input{chapters/appendix}
+\input{chapters/appendix}
+\backmatter
 
 \printbibliography
 
