--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -55,6 +55,7 @@
 \newcommand{\pagref}[1]{\textbf{Page \pageref{#1}}}
 \newcommand{\algoref}[1]{\textbf{Algorithm \ref{#1}}}
 \newcommand{\chapref}[1]{\textbf{Chapter \ref{#1}}}
+\newcommand{\appref}[1]{\textbf{Appendix \ref{#1}}}
 
 
 \fancypagestyle{fancy-style}{%
