--- a/main.tex
+++ b/main.tex
@@ -14,10 +14,10 @@
 %\input{chapters/todo}
 %\input{chapters/intro}
 %\input{chapters/networks}
-\input{chapters/devices}
-\input{chapters/preprocess}
+%\input{chapters/devices}
+%\input{chapters/preprocess}
 %\input{chapters/models}
-%\input{chapters/results}
+\input{chapters/results}
 %\input{chapters/conclusion.tex}
 
 \appendix
