--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -1,4 +1,4 @@
-\usepackage[top=3.5cm,bottom=3.5cm,inner=2.5cm,outer=3.5cm]{geometry}
+\usepackage[top=3.5cm,bottom=3.5cm,inner=3.5cm,outer=2.5cm]{geometry}
 \usepackage[pdftex]{graphicx} %per poter inserire le figure
 \usepackage{amssymb,amsmath,amsthm,amsfonts, extarrows}
 \usepackage{xspace}
@@ -32,6 +32,10 @@
 \usepackage{todonotes}
 %\usepackage{algorithm2e}
 \usepackage{standalone}
+\usepackage{emptypage}
+
+\newenvironment{abstract}{}{}
+\usepackage{abstract}
 
 \usepackage{algpseudocode}
 \usepackage{algorithm}
@@ -79,4 +83,6 @@
 
 \pagestyle{fancy-style} 
 
-\renewcommand{\baselinestretch}{1.2} 
+\renewcommand{\baselinestretch}{1.5} 
+
+
