--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{book}
+\documentclass[a4paper,11pt]{book}
 
 \usepackage{impostazioni}
 
@@ -9,17 +9,19 @@
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
 \tableofcontents
-\mainmatter
 
-%\input{chapters/todo}
-%\input{chapters/intro}
-%\input{chapters/networks}
-%\input{chapters/devices}
+
+%\input{chapters/abstract}
+
+\mainmatter
+\input{chapters/intro}
+\input{chapters/networks}
+\input{chapters/devices}
 %\input{chapters/preprocess}
 %\input{chapters/models}
-\input{chapters/results}
+%\input{chapters/results}
 %\input{chapters/conclusion.tex}
-
+%
 \appendix
 \input{chapters/appendix}
 \backmatter
