--- a/main.tex
+++ b/main.tex
@@ -11,16 +11,16 @@
 \tableofcontents
 
 
-%\input{chapters/abstract}
+\input{chapters/abstract}
 
 \mainmatter
 \input{chapters/intro}
-\input{chapters/networks}
-\input{chapters/devices}
+%\input{chapters/networks}
+%\input{chapters/devices}
 %\input{chapters/preprocess}
 %\input{chapters/models}
 %\input{chapters/results}
-%\input{chapters/conclusion.tex}
+\input{chapters/conclusion.tex}
 %
 \appendix
 \input{chapters/appendix}
