--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -4,7 +4,7 @@
 \usepackage{xspace}
 \usepackage{tabularx}
 \usepackage{indentfirst}
-\usepackage[small]{caption}
+\usepackage[labelfont=bf]{caption}
 \usepackage{eucal}
 \usepackage{eso-pic}
 \usepackage{url}
@@ -33,6 +33,7 @@
 %\usepackage{algorithm2e}
 \usepackage{standalone}
 \usepackage{emptypage}
+\usepackage{wrapfig}
 
 \newenvironment{abstract}{}{}
 \usepackage{abstract}
@@ -86,3 +87,13 @@
 \renewcommand{\baselinestretch}{1.5} 
 
 
+
+\definecolor{amber}{rgb}{1.0, 0.75, 0.0}
+\definecolor{goldmetallic}{rgb}{0.83, 0.69, 0.22}
+\definecolor{airforceblue}{rgb}{0.36, 0.54, 0.66}  %#5D8AA8
+\definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}         %#0047AB
+\definecolor{coolblack}{rgb}{0.0, 0.18, 0.39}      %#002E63
+\definecolor{dartmouthgreen}{rgb}{0.05, 0.5, 0.06} %#00693E
+\definecolor{mydmg}{rgb}{0.05, 0.5, 0.06}          %#00693E
+\definecolor{lava}{rgb}{0.81, 0.06, 0.13}          %#CF1020
+\definecolor{myred}{rgb}{0.81, 0.06, 0.13}         %#CF1020
