--- a/main.tex
+++ b/main.tex
@@ -14,13 +14,13 @@
 \input{chapters/abstract}
 
 \mainmatter
-\input{chapters/intro}
-%\input{chapters/networks}
+%\input{chapters/intro}
+\input{chapters/networks}
 %\input{chapters/devices}
 %\input{chapters/preprocess}
 %\input{chapters/models}
 %\input{chapters/results}
-\input{chapters/conclusion.tex}
+%\input{chapters/conclusion.tex}
 %
 \appendix
 \input{chapters/appendix}
