chap 3 corretto mezzo 4

--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -34,6 +34,7 @@
 \usepackage{standalone}
 \usepackage{emptypage}
 \usepackage{wrapfig}
+\usepackage{enumitem}
 
 \newenvironment{abstract}{}{}
 \usepackage{abstract}
