--- a/main.tex
+++ b/main.tex
@@ -15,9 +15,9 @@
 
 \mainmatter
 %\input{chapters/intro}
-\input{chapters/networks}
+%\input{chapters/networks}
 %\input{chapters/devices}
-%\input{chapters/preprocess}
+\input{chapters/preprocess}
 %\input{chapters/models}
 %\input{chapters/results}
 %\input{chapters/conclusion.tex}
