--- a/main.tex
+++ b/main.tex
@@ -17,8 +17,8 @@
 %\input{chapters/intro}
 %\input{chapters/networks}
 %\input{chapters/devices}
-\input{chapters/preprocess}
-%\input{chapters/models}
+%\input{chapters/preprocess}
+\input{chapters/models}
 %\input{chapters/results}
 %\input{chapters/conclusion.tex}
 %
