chap6 mezzo fatto

--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,9 @@
 %\input{chapters/networks}
 %\input{chapters/devices}
 %\input{chapters/preprocess}
-\input{chapters/models}
-%\input{chapters/results}
-%\input{chapters/conclusion.tex}
+%\input{chapters/models}
+\input{chapters/results}
+\input{chapters/conclusion.tex}
 %
 \appendix
 \input{chapters/appendix}
