--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -35,6 +35,8 @@
 \usepackage{emptypage}
 \usepackage{wrapfig}
 \usepackage{enumitem}
+\usepackage{makecell}
+\usepackage{sidecap}
 
 \newenvironment{abstract}{}{}
 \usepackage{abstract}
