--- a/impostazioni.sty
+++ b/impostazioni.sty
@@ -24,7 +24,7 @@
 \usepackage[italian, english]{babel}   %per riuscire a scrivere gli accenti
 \usepackage{setspace}
 \usepackage[autostyle,italian=guillemets]{csquotes}
-\usepackage[sorting=none, backend=biber]{biblatex}
+
 \usepackage{verbatim}
 \usepackage[super]{nth}
 \usepackage{fancyhdr}
@@ -51,7 +51,8 @@
 \usetikzlibrary{decorations.pathreplacing,calligraphy}
 
 %\renewcommand\thesection{\arabic{section}}
-\addbibresource{bibliografia.bib}
+%\usepackage[sorting=none, backend=biber]{biblatex}
+%\addbibresource{bibliografia.bib}
 \newcolumntype{L}{>{$}l<{$}}
 \newcolumntype{C}{>{$}c<{$}}
 \newcolumntype{R}{>{$}r<{$}}
