Final check (forse)

--- a/biblio.tex
+++ b/biblio.tex
@@ -1,6 +1,41 @@
 \begin{thebibliography}{99}
 
 \renewcommand{\baselinestretch}{1} 
+\small
+
+\bibitem{iot_exp}
+\textit{Internet of Things is a revolutionary approach for future technology enhancement: a review}
+\\\url{https://journalofbigdata.springeropen.com/articles/10.1186/s40537-019-0268-2}
+
+\bibitem{iot_sec}
+\textit{A roadmap for security challenges in the Internet of Things}
+\\\url{https://doi.org/10.1016/j.dcan.2017.04.003}
+
+\bibitem{mac_atk}
+\textit{Analysis on Manipulation of the MAC Address and Consequent Security Threats}
+\\\url{https://doi.org/10.1145/2995959.2995975}
+
+\bibitem{deeplearningbook} 
+\textit{Deep Learning}
+\\Ian Goodfellow and Yoshua Bengio and Aaron Courville, 2016, MIT Press
+\\\url{http://www.deeplearningbook.org}
+
+\bibitem{deep_method}
+\textit{A Short Review of Deep Learning Methods for Understanding Group and Crowd Activities}
+\\\url{https://ieeexplore.ieee.org/document/8489692}
+
+\bibitem{deep_audio}
+\textit{Deep Learning for Audio Signal Processing}
+\\\url{https://arxiv.org/abs/1905.00078}
+
+\bibitem{computer_vision1}
+\textit{Deep Learning for Computer Vision: A Brief Review}
+\\\url{https://doi.org/10.1155/2018/7068349}
+
+\bibitem{computer_vision2}
+\textit{Deep Learning vs. Traditional Computer Vision}
+\\\url{https://arxiv.org/pdf/1910.13796.pdf}
+
 
 
 \bibitem{perceptron}
@@ -22,6 +57,13 @@
 \bibitem{gelu}
 \textit{Gaussian Error Linear Units (GELUS)}
 \\\url{https://arxiv.org/pdf/1606.08415.pdf}
+
+\bibitem{pca}
+\textit{Principal component analysis: a review and recent developments}
+\\\url{https://doi.org/10.1098/rsta.2015.0202}
+
+
+
 
 \bibitem{lossfunc}
 \textit{On Loss Functions for Deep Neural Networks
@@ -68,6 +110,11 @@ Language Understanding}
 \textit{Language Models are Unsupervised Multitask Learners}
 \\\url{https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf}
 
+
+
+\bibitem{reg_gen}
+\textit{Regularization for Deep Learning: A Taxonomy}
+\\\url{https://arxiv.org/abs/1710.10686}
 
 
 \bibitem{l1reg}
@@ -161,6 +208,11 @@ Identification for Security Enforcement in IoT}
 \textsc{Wireshark} Documentation
 \\\url{https://www.wireshark.org/download/docs/user-guide.pdf}
 
+\bibitem{data_aug}
+\textit{Time Series Data Augmentation for Deep Learning: A Survey}
+\\\url{https://arxiv.org/pdf/2002.12478.pdf}
+
+
 
 \bibitem{gce}
 \textit{Nozomi Networks Guardian Community Edition}
@@ -178,6 +230,14 @@ Identification for Security Enforcement in IoT}
 \bibitem{keras} 
 \textsc{Keras} Documentation 
 \\\url{https://keras.io/}
+
+\bibitem{auc} 
+\textit{The use of the area under the ROC curve in the evaluation of machine learning algorithms}
+\\\url{https://doi.org/10.1016/S0031-3203(96)00142-2}
+
+\bibitem{auc_var} 
+\textit{A critical analysis of variants of the AUC}
+\\\url{https://link.springer.com/content/pdf/10.1007/s10994-008-5070-x.pdf}
 
 
 
