--- a/main.tex
+++ b/main.tex
@@ -16,12 +16,12 @@
 \input{chapters/abstract}
 
 \mainmatter
-\input{chapters/intro}
-\input{chapters/networks}
-\input{chapters/devices}
-\input{chapters/preprocess}
-\input{chapters/models}
-\input{chapters/results}
+%\input{chapters/intro}
+%\input{chapters/networks}
+%\input{chapters/devices}
+%\input{chapters/preprocess}
+%\input{chapters/models}
+%\input{chapters/results}
 \input{chapters/conclusion.tex}
 %
 \appendix
